<resources>
    <string name="app_name">FunWithIntent</string>
    <string name="app_toolbar_name">Fun With Intent</string>
    <string name="text_next">NEXT</string>
    <string name="text_next_clear">NEXT CLEAR</string>
    <string name="text_home">HOME</string>
    <string name="text_phone">phone</string>
    <string name="text_media">media</string>
    <string name="text_camera">camera</string>
    <string name="text_message">message</string>
    <string name="text_next_stack">next stack</string>
</resources>
